added open-source code
added link in html and fixed in css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
       </div>
     </div>
+    <h6 class="code-info"> <a href="https://github.com/OksanaDemchyshyna/weather-app" class="source">Open-source code</a> by Oksana Demchyshyna</h6>
     <script src="src/index.js"></script>
   </body>
 </html>
